--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </p>
         </div>
         <div id="contact" >
-            <a class="iconBio" target="blank" href="mailto:cristian123105@gmail.com" alt="Link to my gmail">
-                <img src="icons/gmail.svg" /><p>cristian123105@gmail.com</p>
+            <a class="iconBio" target="blank" href="mailto:cristian.magalhaes.dev@gmail.com" alt="Link to my gmail">
+                <img src="icons/gmail.svg" /><p>cristian.magalhaes.dev@gmail.com</p>
             </a>
             <a class="iconBio" target="blank" alt="Link to my city"
                 href="https://www.google.com/maps/place/Guaruj%C3%A1+-+SP/data=!4m2!3m1!1s0x94d1fe0bcb5eefe3:0xd3ce231a2f8a0536?sa=X&ved=2ahUKEwiV26-7ou7pAhVMEbkGHdd6DRcQ8gEwI3oECBcQBg">
